--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
       architecto eligendi autem exercitationem cum libero excepturi error veniam
       vitae tempora.
     </p>
+    <ul>
+        <li>
+            Home
+        </li>
+    </ul>
+    <ul>
+        <li>
+            About
+        </li>
+    </ul>
+    <ul>
+        <li>
+            Contact
+        </li>
+    </ul>
   </body>
 </html>
